--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "nuxt": "^3.0.0"
+    "nuxt": "3.3.3"
+  },
+  "dependencies": {
+    "@mdi/font": "^7.2.96",
+    "sass": "^1.61.0",
+    "vuetify": "^3.1.4"
   }
 }
