--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "nuxt": "3.3.3"
+    "@nuxtjs/google-fonts": "^3.0.0",
+    "nuxt": "3.3.3",
+    "sass": "^1.61.0"
   },
   "dependencies": {
     "@mdi/font": "^7.2.96",
-    "sass": "^1.61.0",
+    "vite-plugin-vuetify": "^1.0.2",
     "vuetify": "^3.1.4"
   }
 }
