--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   },
   "dependencies": {
     "@mdi/font": "^7.2.96",
+    "@nuxtjs/vuetify": "^1.12.3",
     "vite-plugin-vuetify": "^1.0.2",
-    "vuetify": "^3.1.4"
+    "vuetify": "^3.4.3"
   }
 }
