--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
   },
   "devDependencies": {
     "esbuild": "^0.19.7",
-    "nuxt": "3.3.3",
+    "nuxt": "^3.8.2",
     "sass": "^1.61.0"
   },
   "dependencies": {
     "@mdi/font": "^7.2.96",
+    "@nuxt/content": "^2.9.0",
     "@nuxtjs/vuetify": "^1.12.3",
+    "nuxi": "^3.10.0",
     "vite-plugin-vuetify": "^1.0.2",
     "vuetify": "^3.4.3"
   }
