--- a/package.json
+++ b/package.json
@@ -1,23 +1,27 @@
 {
   "private": true,
+  "type": "module",
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:ui": "vitest --ui"
   },
   "devDependencies": {
+    "@nuxthq/studio": "^1.0.0",
+    "@vitest/ui": "^1.0.4",
     "esbuild": "^0.19.7",
-    "nuxt": "^3.8.2",
-    "sass": "^1.61.0"
+    "fast-check": "^3.15.0",
+    "nuxt": "^3.10.0",
+    "vitest": "^1.0.4"
   },
   "dependencies": {
-    "@mdi/font": "^7.2.96",
-    "@nuxt/content": "^2.9.0",
-    "@nuxtjs/vuetify": "^1.12.3",
-    "nuxi": "^3.10.0",
-    "vite-plugin-vuetify": "^1.0.2",
-    "vuetify": "^3.4.3"
+    "@nuxt-themes/alpine": "^1.6.6",
+    "@nuxt/content": "^2.11.0",
+    "nuxi": "^3.10.0"
   }
 }
